--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,9 @@ body {
         display: flex;
         flex-direction: row;
         width: 100%;
+        height: 100vh;
+        height: 100dvh;
+        overflow: hidden;
     }
 
     .left {
